Fix spacing for tags

--- a/src/sass/components/projects/project.scss
+++ b/src/sass/components/projects/project.scss
@@ -119,7 +119,8 @@
             &-tags {
                 opacity: 0;
                 visibility: hidden;
-
+                display: flex;
+                justify-content: space-around;
                 //$ Label
                 p {
 
